<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dovetail</string>
    <string name="demo_app_name">Dovetail Demo</string>
    
    <string name="action_record">Record</string>
    <string name="action_stop">Stop</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
    
    <string name="start_recording">Start Recording</string>
    
    <string name="seconds">sec</string>
    <string name="bpm">beats/min</string>
    
    <string name="mom">mom</string>
    <string name="baby">baby</string>
    
    <string name="filter">Filter</string>
    <string name="record">record</string>
    <string name="recording">recording</string>
    
    <string name="tap_to_listen">Tap to listen</string>
    <string name="tap_to_mute">Tap to mute</string>
    
    <string name="connected">connected</string>
    <string name="disconnected">disconnected</string>
    <string name="connecting">searching</string>
    
    <string name="ble_not_supported">Bluetooth LE not supported.</string>
    
    <string name="recording_tags">recording tags</string>

</resources>
