<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="care.dovetail.monitor.SettingsActivity" >
    
    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/widgets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:id="@+id/heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/ic_heart" >

            <TextView
                android:id="@+id/bpm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="\?"
                android:textSize="50sp"
                android:textColor="@color/primary_dark" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bpm"
                style="@style/IconTip" />
            
            <TextView
                    android:id="@+id/tap_to_listen"
                    style="@style/IconTip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tap_to_listen"
                    android:textSize="10sp" />
        </LinearLayout>

        <FrameLayout
                android:id="@+id/recorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/status"
            style="@style/IconTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/connecting" />
        
        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/status" />

        <ToggleButton
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textOff="@string/action_pause"
            android:textOn="@string/action_resume" />
        
        <ToggleButton
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/pause"
            android:textOff="@string/filter"
            android:textOn="@string/filter" />

    </RelativeLayout>

</FrameLayout>
